made cell click, edit work and getting the cell number, made color contrast better, added different section for functionalities, made bold, italics, underline work for the cells

--- a/style.css
+++ b/style.css
@@ -7,59 +7,114 @@ body {
 .menu-container {
     height: 4rem;
     background-color: lightpink;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding-left: 0.5rem;
+}
+.menu-container >* {
+    height: 2rem;
+    background-color: white;
+}
+.font-size {
+    width: 5.7rem;
+}
+.font-family {
+    width: 10%;
+}
+.bui-container {
+    width: 10%;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.align-container {
+    width: 10%;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.color-container {
+    width: 10%;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#size {
+    height: 100%;
+    width: 100%;
 }
 .formula-container {
     height: 2rem;
     background-color: aliceblue;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.formula-container >* {
+    height: 70%;
+}
+.address-input {
+    width: 4rem;
+}
+.formula-input {
+    width: calc(100vw - 6rem );
 }
 .grid-container {
     height: calc(100vh - (4rem + 2rem + 2rem));
-    background-color: aqua;
+    background-color: rgb(74, 228, 182);
     overflow: auto;
+    position: relative;
 }
 .row {
-    display: flex;
-}
-.col-number {
     display: flex;
 }
 .top-row {
     width: calc( 100vh - 2rem);
     height: 2rem;
     display: flex;
+    position: absolute;
+    left: 2rem;
+    top: 0;
 }
 .left-box {
     background-color: gray;
 } 
 .grid {
-    background-color:blueviolet;
+    background-color: white;
+    position: absolute;
+    left: 2rem;
+    top: 2rem;
 }
 .sheet-container {
     height: 2rem;
     display: flex;
 }
 .add-sheet-btn-container {
-    background-color: brown;
+    background-color: rgb(208, 214, 210);
     height: 3rem;
-    border: 1px solid;
+    width: 1.8rem;
+    border-right: 1px solid rgb(165, 170, 163);
     height: 100%;
-    padding-top: 0.2rem;
-    padding-bottom: 0.3rem;
-}
-.full-grid {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .sheet-list {
-    width: calc(100vw - 3rem);
+    width: calc(100vw - 4rem);
     display: flex;
-    background-color: rgb(233, 222, 222);
+    background-color: rgb(208, 214, 210);
     /* change width to min-width */
     overflow: auto;
 }
+
+/* scroll, but hide the scroll bar */
 .sheet-list::-webkit-scrollbar {
     display: none;
 }
-
 /* Hide scrollbar for IE, Edge and Firefox */
 .sheet-list {
     -ms-overflow-style: none; /* IE and Edge */
@@ -68,10 +123,11 @@ body {
 .sheet {
     min-width: 5rem;
     height: 100%;
-    background-color: rgb(233, 222, 222);
+    background-color: rgb(206, 212, 207);
     display: flex;
     justify-content: center;
-    border: 1px solid rgb(201, 193, 193);
+    align-items: center;
+    border: 1px solid rgb(165, 170, 163);
 }
 .active {
     background-color: white;
@@ -79,12 +135,17 @@ body {
 .box {
     height: 2rem;
     width: 2rem;
-    border: 1px solid;
-    text-align: center;
+    border: 1px solid rgb(138, 135, 135);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cell {
-    min-width: 3rem;
-    border: 1px solid rgb(52, 209, 52);
+    min-width: 4rem;
+    border: 1px solid rgb(192, 190, 190);
     text-align: center;
     height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
